[tool.poetry]
name = "aws-healthchecker-response"
version = "0.1.0"
description = "Django Middleware to return a 200 response to the AWS ELB HealthChecker without doing Host header checks"
authors = ["Matt Magin <matt.magin@cmv.com.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"

[tool.poetry.dev-dependencies]
pre-commit = "^1.12"
prospector = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
